--- a/index.ipynb
+++ b/index.ipynb
@@ -823,7 +823,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    return dict(marker={'color':'red'},mode='lines',name=f\"error at {x}\",x=[x,x],y=list(m*x+b,y_actu)"
+    "    return dict(marker={'color':'red'},mode='lines',name=f\"error at {x}\",x=[x,x],y=[m*x+b,y_actual)"
    ]
   },
   {
