--- a/index.ipynb
+++ b/index.ipynb
@@ -1133,7 +1133,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return [error_line_trace(x_values,)"
+    "    return [error_line_trace(x_values,y_values,m,b,x) for x in "
    ]
   },
   {
