--- a/index.ipynb
+++ b/index.ipynb
@@ -1949,26 +1949,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    return (y_actual(x,x_values,y_values)-(m*x+b)**2"
+    "    return (y_actual(x,x_values,y_values)-(m*x+b))**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "193.21000000000006"
+       "37.20999999999993"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1991,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
